// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a single expense summary correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    €5,00
  </h1>
</div>
`;

exports[`should render multiple expenses summary correctly 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    €15,00
  </h1>
</div>
`;
